--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-# Run this workflow every time a commit gets pushed to main or a pull request gets opened against main
+# Run this workflow every time a commit gets pushed to main or a pull request gets opened againt main
 on:
   push:
     branches:
